fix(relational): fix project

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -93,7 +93,7 @@ not_regex_like_symbol=NOT REGEXP_LIKE
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=false
 
-jdbc_support_get_table_name_from_result_set=false
+#jdbc_support_get_table_name_from_result_set=false
 
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
