fix(relational): fix the connection of dameng

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -24,7 +24,7 @@
 driver_class=dm.jdbc.driver.DmDriver
 
 # \u9ED8\u8BA4\u6570\u636E\u5E93
-default_database=DAMENG
+default_database=SYSDBA
 
 # \u7CFB\u7EDF\u6570\u636E\u5E93\uFF0C\u7528\u4E8E\u8FC7\u6EE4
 system_databases=SYS,CTISYS,SYSAUDITOR,SYSSSO
