fix(relational): fix the connection of dameng

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -67,7 +67,7 @@ update_table_statement = UPDATE %s SET %s WHERE %s = %s
 delete_table_statement = UPDATE %s SET %s = NULL WHERE (%s >= %d AND %s < %d)
 
 # \u5728JDBC\u4F7F\u7528getTables\u65F6\u662F\u5426\u9700\u8981\u52A0\u5F15\u53F7
-jdbc_need_quote=false
+jdbc_need_quote=true
 
 # upsert\u8BED\u53E5\u4E2D\u95F4\u90E8\u5206
 upsert_statement = WHEN MATCHED THEN UPDATE SET
