--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -67,7 +67,7 @@ update_table_statement = UPDATE %s SET %s WHERE %s = %s
 delete_table_statement = UPDATE %s SET %s = NULL WHERE (%s >= %d AND %s < %d)
 
 # \u5728JDBC\u4F7F\u7528getTables\u65F6\u662F\u5426\u9700\u8981\u52A0\u5F15\u53F7
-jdbc_need_quote=true
+jdbc_need_quote=false
 
 # upsert\u8BED\u53E5\u4E2D\u95F4\u90E8\u5206
 upsert_statement = WHEN MATCHED THEN UPDATE SET
@@ -92,8 +92,6 @@ not_regex_like_symbol=NOT REGEXP_LIKE
 
 # jdbc\u5143\u6570\u636E\u83B7\u53D6\u662F\u5426\u652F\u6301\u7279\u6B8A\u5B57\u7B26\u8BC6\u522B
 jdbc_support_special_char=false
-
-#jdbc_support_get_table_name_from_result_set=false
 
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
