--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -27,6 +27,7 @@ runs:
                   -e UNICODE_FLAG=1 \
                   -e CASE_SENSITIVE=0 \
                   -e INSTANCE_NAME=dm8_test \
+                  -e BUFFER=4000 \
                   -v /opt/data_$port:/opt/dmdbms/data \
                   dm8_single:dm8_20241022_rev244896_x86_rh6_64
               done
@@ -67,6 +68,7 @@ runs:
                   -e UNICODE_FLAG=1 \
                   -e CASE_SENSITIVE=0 \
                   -e INSTANCE_NAME=dm8_test \
+                  -e BUFFER=4000 \
                   -v /mnt/c/opt/data_$port:/opt/dmdbms/data \
                   dm8_single:dm8_20241022_rev244896_x86_rh6_64
               done
