--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,31 +11,31 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-    unit-test:
-        uses: ./.github/workflows/unit-test.yml
-    unit-mds:
-        uses: ./.github/workflows/unit-mds.yml
-    case-regression:
-        uses: ./.github/workflows/case-regression.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-    standalone-test:
-        uses: ./.github/workflows/standalone-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-    standalone-test-no-optimizer:
-        uses: ./.github/workflows/standalone-test-no-optimizer.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-    db-ce:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-    db-ce-no-optimizer:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            close-optimizer: "true"
+    #    unit-test:
+    #        uses: ./.github/workflows/unit-test.yml
+    #    unit-mds:
+    #        uses: ./.github/workflows/unit-mds.yml
+    #    case-regression:
+    #        uses: ./.github/workflows/case-regression.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #    standalone-test:
+    #        uses: ./.github/workflows/standalone-test.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #    standalone-test-no-optimizer:
+    #        uses: ./.github/workflows/standalone-test-no-optimizer.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #    db-ce:
+    #        uses: ./.github/workflows/DB-CE.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #    db-ce-no-optimizer:
+    #        uses: ./.github/workflows/DB-CE.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            close-optimizer: "true"
     standalone-test-no-mac-relational:
         uses: ./.github/workflows/standalone-test.yml
         with:
@@ -67,47 +67,47 @@ jobs:
             functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
             timeout-minutes: 120
             close-optimizer: "true"
-    standalone-test-vectordb:
-        uses: ./.github/workflows/standalone-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["VectorDB"]'
-            timeout-minutes: 300
-    standalone-test-no-optimizer-vectordb:
-        uses: ./.github/workflows/standalone-test-no-optimizer.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["VectorDB"]'
-            timeout-minutes: 300
-    db-ce-vectordb:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["VectorDB"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
-            timeout-minutes: 360
-    db-ce-no-optimizer-vectordb:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["VectorDB"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
-            timeout-minutes: 360
-            close-optimizer: "true"
-    remote-test:
-        uses: ./.github/workflows/remote-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-    assembly-test:
-        uses: ./.github/workflows/assembly-test.yml
-    free-thread-test:
-        uses: ./.github/workflows/free-thread-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
+    #    standalone-test-vectordb:
+    #        uses: ./.github/workflows/standalone-test.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["VectorDB"]'
+    #            timeout-minutes: 300
+    #    standalone-test-no-optimizer-vectordb:
+    #        uses: ./.github/workflows/standalone-test-no-optimizer.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["VectorDB"]'
+    #            timeout-minutes: 300
+    #    db-ce-vectordb:
+    #        uses: ./.github/workflows/DB-CE.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["VectorDB"]'
+    #            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+    #            timeout-minutes: 360
+    #    db-ce-no-optimizer-vectordb:
+    #        uses: ./.github/workflows/DB-CE.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["VectorDB"]'
+    #            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+    #            timeout-minutes: 360
+    #            close-optimizer: "true"
+    #    remote-test:
+    #        uses: ./.github/workflows/remote-test.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #    assembly-test:
+    #        uses: ./.github/workflows/assembly-test.yml
+    #    free-thread-test:
+    #        uses: ./.github/workflows/free-thread-test.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
     tpc-h-regression-test:
         uses: ./.github/workflows/tpc-h.yml
         with:
@@ -119,42 +119,42 @@ jobs:
             os-matrix: '["ubuntu-latest"]'
             metadata-matrix: '["zookeeper"]'
             close-optimizer: "true"
-    tpc-h-regression-test-vectordb:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["VectorDB"]'
-            timeout-minutes: 360
-    tpc-h-regression-test-no-optimizer-vectordb:
-        uses: ./.github/workflows/tpc-h.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["VectorDB"]'
-            close-optimizer: "true"
-            timeout-minutes: 360
+    #    tpc-h-regression-test-vectordb:
+    #        uses: ./.github/workflows/tpc-h.yml
+    #        with:
+    #            os-matrix: '["ubuntu-latest"]'
+    #            metadata-matrix: '["zookeeper"]'
+    #            db-matrix: '["VectorDB"]'
+    #            timeout-minutes: 360
+    #    tpc-h-regression-test-no-optimizer-vectordb:
+    #        uses: ./.github/workflows/tpc-h.yml
+    #        with:
+    #            os-matrix: '["ubuntu-latest"]'
+    #            metadata-matrix: '["zookeeper"]'
+    #            db-matrix: '["VectorDB"]'
+    #            close-optimizer: "true"
+    #            timeout-minutes: 360
     analyze-required-test-check:
         if: always()
         needs: # List of jobs that must pass. Add more jobs if needed.
-            - unit-test
-            - unit-mds
-            - case-regression
-            - standalone-test
-            - standalone-test-no-optimizer
-            - db-ce
-            - db-ce-no-optimizer
-            - standalone-test-vectordb
-            - standalone-test-no-optimizer-vectordb
-            - db-ce-vectordb
-            - db-ce-no-optimizer-vectordb
-            - remote-test
-            - assembly-test
-            - free-thread-test
+            #            - unit-test
+            #            - unit-mds
+            #            - case-regression
+            #            - standalone-test
+            #            - standalone-test-no-optimizer
+            #            - db-ce
+            #            - db-ce-no-optimizer
+            #            - standalone-test-vectordb
+            #            - standalone-test-no-optimizer-vectordb
+            #            - db-ce-vectordb
+            #            - db-ce-no-optimizer-vectordb
+            #            - remote-test
+            #            - assembly-test
+            #            - free-thread-test
             - tpc-h-regression-test
             - tpc-h-regression-test-no-optimizer
-            - tpc-h-regression-test-vectordb
-            - tpc-h-regression-test-no-optimizer-vectordb
+            #            - tpc-h-regression-test-vectordb
+            #            - tpc-h-regression-test-no-optimizer-vectordb
             - standalone-test-no-mac-relational
             - standalone-test-no-optimizer-no-mac-relational
             - db-ce-no-mac-relational
