--- a/conf/config.properties
+++ b/conf/config.properties
@@ -40,13 +40,13 @@ password=root
 # 数据库列表，使用','分隔不同实例
 #storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
 #storageEngineList=127.0.0.1#8086#influxdb#url=http://localhost:8086/#token=your-token#organization=your-organization#has_data=false
-storageEngineList=127.0.0.1#6668#filesystem#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=1s#dummy_dir=dummy#dummy.struct=LegacyFilesystem#dummy.config.chunk_size_in_bytes=1048576#dummy.config.memory_pool_size=100#client.connectPool.maxTotal=100
+#storageEngineList=127.0.0.1#6668#filesystem#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=1s#dummy_dir=dummy#dummy.struct=LegacyFilesystem#dummy.config.chunk_size_in_bytes=1048576#dummy.config.memory_pool_size=100#client.connectPool.maxTotal=100
 #storageEngineList=127.0.0.1#5432#relational#engine=postgresql#username=postgres#password=postgres#has_data=false
 #storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#has_data=false
 #storageEngineList=127.0.0.1#27017#mongodb#uri="mongodb://127.0.0.1:27017/?maxPoolSize=200&maxIdleTimeMS=60000&waitQueueTimeoutMS=50000"#has_data=false#schema.sample.size=1000#dummy.sample.size=0
 #storageEngineList=127.0.0.1#6379#redis#has_data=false#is_read_only=false#timeout=20000#data_db=1#dummy_db=0
 #storageEngineList=127.0.0.1#19530#VectorDB#protocol=grpc#has_data=false#is_read_only=false#timeout=5000#topk=3
-#storageEngineList=127.0.0.1#5236#relational#engine=dameng#username=SYSDBA#password=SYSDBA001#has_data=false
+storageEngineList=127.0.0.1#5236#relational#engine=dameng#username=SYSDBA#password=SYSDBA001#has_data=false
 #storageEngineList=127.0.0.1#1521#relational#engine=oracle#username=SYSTEM#password=ORCLPWD#database=ORCLPDB#has_data=false
 
 # 底层数据库类名
@@ -56,14 +56,14 @@ databaseClassNames=iotdb12=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage,influxdb=cn.
 ### 分片配置
 ##########################
 
-# 写入的副本数
+# 写入的副本个数
 replicaNum=0
 
 # 分片策略
 policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
 #policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
 
-# 重分片时，新的分片的结束时间多加的时间间隔，单位为秒
+# 重分片时，新分片的结束时间多加的间距，单位为秒
 reshardFragmentTimeMargin=60
 
 ##########################
@@ -80,20 +80,20 @@ reshardFragmentTimeMargin=60
 ### Session 配置
 ##########################
 
-# thrift线程池最小线程数
+# thrift线程池最小线程数量
 minThriftWorkerThreadNum = 20
 
-# thrift线程池最大线程数
+# thrift线程池最大线程数量
 maxThriftWrokerThreadNum = 2147483647
 
 ##########################
-### 查询层配置
+### 逻辑层配置
 ##########################
 
 # 约束
 constraintChecker=naive
 
-# 查询层优化策略
+# 逻辑层优化策略
 queryOptimizer=rbo
 
 # 优化器规则
@@ -107,13 +107,13 @@ ruleBasedOptimizer=NotFilterRemoveRule=on,ColumnPruningRule=on,ConstantPropagati
 ### 执行层配置
 ##########################
 
-# 内存任务线程池大小
+# 内存任务执行线程池
 memoryTaskThreadPoolSize=200
 
 # 每个存储节点对应的工作线程数
 physicalTaskThreadPoolSizePerStorage=100
 
-# 每个存储节点最大缓存物理任务数
+# 每个存储节点任务最大堆积数
 maxCachedPhysicalTaskPerStorage=500
 
 # 物理层优化策略
@@ -189,10 +189,10 @@ zookeeperConnectionString=127.0.0.1:2181
 # 如果使用 etcd 作为元数据存储后端，需要提供，如果有多个 etcd 实例，以逗号分隔
 #etcdEndpoints=http://localhost:2379
 
-# 是否开启元数据内存缓存管理
+# 是否开启元数据内存管理
 enableMetaCacheControl=false
 
-# 分片存储最大内存限制，单位为 KB，默认 128 MB
+# 分片缓存最大内存限制，单位为 KB，默认 128 MB
 fragmentCacheThreshold=131072
 
 ##########################
@@ -241,7 +241,7 @@ pythonCMD=python3
 # 是否初始化配置文件内指定的UDF/Transform
 needInitBasicUDFFunctions=false
 
-# UDF定义文件存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
+# UDF定义文件夹存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
 # %defaultUDFDir%
 #   |- udf_list         (udf函数列表及元信息文件)
 #   |- python_scripts/   (python脚本文件夹)
@@ -251,14 +251,14 @@ defaultUDFDir=udf_funcs
 ##########################
 ### Transform配置
 ##########################
-# 流程执行时，每批数据的大小
+# 流式执行时，每批数据的大小
 batchSize=50
 # Transform任务执行线程池
 transformTaskThreadPoolSize=10
 # Transform最大重试次数
 transformMaxRetryTimes=3
 
-# 定时任务的yaml脚本的保存路径
+# 定时任务的yaml脚本的保存位置
 defaultScheduledTransformJobDir=transform_jobs
 
 ####################
