--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,31 +11,31 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-    #    unit-test:
-    #        uses: ./.github/workflows/unit-test.yml
-    #    unit-mds:
-    #        uses: ./.github/workflows/unit-mds.yml
-    #    case-regression:
-    #        uses: ./.github/workflows/case-regression.yml
-    #        with:
-    #            metadata-matrix: '["zookeeper"]'
-    #    standalone-test:
-    #        uses: ./.github/workflows/standalone-test.yml
-    #        with:
-    #            metadata-matrix: '["zookeeper"]'
-    #    standalone-test-no-optimizer:
-    #        uses: ./.github/workflows/standalone-test-no-optimizer.yml
-    #        with:
-    #            metadata-matrix: '["zookeeper"]'
-    #    db-ce:
-    #        uses: ./.github/workflows/DB-CE.yml
-    #        with:
-    #            metadata-matrix: '["zookeeper"]'
-    #    db-ce-no-optimizer:
-    #        uses: ./.github/workflows/DB-CE.yml
-    #        with:
-    #            metadata-matrix: '["zookeeper"]'
-    #            close-optimizer: "true"
+    unit-test:
+        uses: ./.github/workflows/unit-test.yml
+    unit-mds:
+        uses: ./.github/workflows/unit-mds.yml
+    case-regression:
+        uses: ./.github/workflows/case-regression.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+    standalone-test:
+        uses: ./.github/workflows/standalone-test.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+    standalone-test-no-optimizer:
+        uses: ./.github/workflows/standalone-test-no-optimizer.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+    db-ce:
+        uses: ./.github/workflows/DB-CE.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+    db-ce-no-optimizer:
+        uses: ./.github/workflows/DB-CE.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+            close-optimizer: "true"
     standalone-test-no-mac-relational:
         uses: ./.github/workflows/standalone-test.yml
         with:
