--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -9,27 +9,56 @@ inputs:
         description: Dameng db version.
         default: "dm8"
         required: false
+    start:
+        description: "whether to start"
+        required: true
+
 runs:
     using: "composite"
     steps:
+        - name: Setup docker compose
+          uses: ./.github/actions/dockerCompose
+
+        - if: fromJSON(inputs.start)
+          name: Create Config for milvus docker compose
+          shell: bash
+          working-directory: ${{ github.workspace }}
+          run: |
+              for port in ${{ inputs.ports }}; do
+                mkdir -p $port
+                mkdir -p volumes$port
+                mkdir -p volumes$port/etcd
+                mkdir -p volumes$port/minio
+                mkdir -p volumes$port/dameng
+                cp -f docker/dameng/docker-compose.yml $port/docker-compose-$port.yml
+                sed -i"" -e "s/5236:5236/$port:5236/g" $port/docker-compose-$port.yml
+                sed -i"" -e "s/\/volumes/\/volumes$port/g" $port/docker-compose-$port.yml
+                sed -i"" -e "s/container_name: dm8/container_name: ${{ inputs.version }}-$port/g" $port/docker-compose-$port.yml
+              done
+              echo "docker-compose.yml created successfully"
+
         - if: runner.os == 'Linux'
           name: Run Dameng Database container
           shell: bash
           run: |
               for port in ${{ inputs.ports }}; do
-                docker run -d -p $port:5236 --restart=always \
-                  --name=${{ inputs.version }}-$port \
-                  --privileged=true \
-                  -e LD_LIBRARY_PATH=/opt/dmdbms/bin \
-                  -e PAGE_SIZE=16 \
-                  -e EXTENT_SIZE=32 \
-                  -e LOG_SIZE=1024 \
-                  -e UNICODE_FLAG=1 \
-                  -e CASE_SENSITIVE=0 \
-                  -e INSTANCE_NAME=dm8_test \
-                  -v /opt/data_$port:/opt/dmdbms/data \
-                  dm8_single:dm8_20241022_rev244896_x86_rh6_64
+                sudo chown -R $(whoami) $port/
+                sudo nohup docker-compose -f $port/docker-compose-$port.yml up -d
               done
+              sleep 10
+              docker ps -a
+        #                docker run -d -p $port:5236 --restart=always \
+        #                  --name=${{ inputs.version }}-$port \
+        #                  --privileged=true \
+        #                  -e LD_LIBRARY_PATH=/opt/dmdbms/bin \
+        #                  -e PAGE_SIZE=16 \
+        #                  -e EXTENT_SIZE=32 \
+        #                  -e LOG_SIZE=1024 \
+        #                  -e UNICODE_FLAG=1 \
+        #                  -e CASE_SENSITIVE=0 \
+        #                  -e INSTANCE_NAME=dm8_test \
+        #                  -v /opt/data_$port:/opt/dmdbms/data \
+        #                  dm8_single:dm8_20241022_rev244896_x86_rh6_64
 
         - if: runner.os == 'Linux'
           name: Verify Dameng Database is running
@@ -57,20 +86,26 @@ runs:
           shell: wsl-run {0}
           run: |
               for port in ${{ inputs.ports }}; do
-                docker run -d -p $port:5236 --restart=always \
-                  --name=${{ inputs.version }}-$port \
-                  --privileged=true \
-                  -e LD_LIBRARY_PATH=/opt/dmdbms/bin \
-                  -e PAGE_SIZE=16 \
-                  -e EXTENT_SIZE=32 \
-                  -e LOG_SIZE=1024 \
-                  -e UNICODE_FLAG=1 \
-                  -e CASE_SENSITIVE=0 \
-                  -e INSTANCE_NAME=dm8_test \
-                  -e BUFFER=4000 \
-                  -v /mnt/c/opt/data_$port:/opt/dmdbms/data \
-                  dm8_single:dm8_20241022_rev244896_x86_rh6_64
+                sudo chown -R $(whoami) $port/
+                sudo nohup docker-compose -f $port/docker-compose-$port.yml up -d
               done
+              sleep 30
+              docker ps -a
+        #              for port in ${{ inputs.ports }}; do
+        #                docker run -d -p $port:5236 --restart=always \
+        #                  --name=${{ inputs.version }}-$port \
+        #                  --privileged=true \
+        #                  -e LD_LIBRARY_PATH=/opt/dmdbms/bin \
+        #                  -e PAGE_SIZE=16 \
+        #                  -e EXTENT_SIZE=32 \
+        #                  -e LOG_SIZE=1024 \
+        #                  -e UNICODE_FLAG=1 \
+        #                  -e CASE_SENSITIVE=0 \
+        #                  -e INSTANCE_NAME=dm8_test \
+        #                  -e BUFFER=4000 \
+        #                  -v /mnt/c/opt/data_$port:/opt/dmdbms/data \
+        #                  dm8_single:dm8_20241022_rev244896_x86_rh6_64
+        #              done
 
         - if: runner.os == 'Windows'
           name: Verify Dameng Database is running
