fix(relational): add dameng docker-compose

--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -16,8 +16,8 @@ inputs:
 runs:
     using: "composite"
     steps:
-        - name: Setup docker compose
-          uses: ./.github/actions/dockerCompose
+        #        - name: Setup docker compose
+        #          uses: ./.github/actions/dockerCompose
 
         - if: fromJSON(inputs.start)
           name: Create Config for dameng docker compose
