--- a/.github/actions/setup/dameng/action.yml
+++ b/.github/actions/setup/dameng/action.yml
@@ -9,19 +9,36 @@ inputs:
 runs:
     using: "composite"
     steps:
-        #        - if: runner.os == 'Windows'
-        #          uses: vedantmgoyal9/setup-wsl2@main
-        #
-        #        - if: runner.os == 'Windows'
-        #          run: apt update && apt upgrade -y
-        #          shell: wsl-run {0}
+        - if: runner.os == 'Windows'
+          uses: vedantmgoyal9/setup-wsl2@main
+
+        - if: runner.os == 'Windows'
+          run: apt update && apt upgrade -y
+          shell: wsl-run {0}
+
+        - if: runner.os == 'Windows'
+          name: Install Docker Compose
+          shell: wsl-run {0}
+          run: |
+              sudo apt install apt-transport-https ca-certificates curl software-properties-common -y
+              curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+              sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
+              sudo apt update
+              sudo apt install docker-ce docker-ce-cli containerd.io -y
+              sudo service docker start
+              docker --version
+              DOCKER_COMPOSE_VERSION=v2.30.1
+              sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+              sudo chmod +x /usr/local/bin/docker-compose
+              docker-compose --version
 
         - if: runner.os == 'Linux'
-          name: Download Dameng Database Docker image and Load Dameng Database container
+          name: Install Docker Compose
           shell: bash
           run: |
-              wget https://github.com/IGinX-THU/IGinX-resources/raw/refs/heads/main/resources/dm8_20241022_x86_rh6_64_single.tar
-              docker load -i dm8_20241022_x86_rh6_64_single.tar
+              DOCKER_COMPOSE_VERSION=v2.30.1
+              sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+              sudo chmod +x /usr/local/bin/docker-compose
 
         #        - if: runner.os == 'Windows'
         #          name: Install Docker
@@ -33,6 +50,13 @@ runs:
         #              sudo apt update
         #              sudo apt install docker-ce docker-ce-cli containerd.io -y
         #              sudo service docker start
+
+        - if: runner.os == 'Linux'
+          name: Download Dameng Database Docker image and Load Dameng Database container
+          shell: bash
+          run: |
+              wget https://github.com/IGinX-THU/IGinX-resources/raw/refs/heads/main/resources/dm8_20241022_x86_rh6_64_single.tar
+              docker load -i dm8_20241022_x86_rh6_64_single.tar
 
         - if: runner.os == 'Windows'
           name: Download Dameng Database Docker image and Load Dameng Database container
