--- a/.github/actions/context/action.yml
+++ b/.github/actions/context/action.yml
@@ -91,3 +91,19 @@ runs:
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_macos.sh"
                 "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_macos.sh" ${VERSION}
               fi
+
+        - if: inputs.shell=='client-event-expansion'
+          name: Test whether client support event expansion
+          shell: bash
+          run: |
+              sudo apt install expect
+              if [ "$RUNNER_OS" == "Linux" ]; then
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_event_expansion.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_event_expansion.sh" ${VERSION}
+              elif [ "$RUNNER_OS" == "Windows" ]; then
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_event_expansion_windows.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_event_expansion_windows.sh" ${VERSION}
+              elif [ "$RUNNER_OS" == "macOS" ]; then
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_event_expansion_macos.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_event_expansion_macos.sh" ${VERSION}
+              fi
