fix(relational): test event expansion

--- a/.github/actions/context/action.yml
+++ b/.github/actions/context/action.yml
@@ -96,15 +96,39 @@ runs:
           name: Test whether client support event expansion
           shell: bash
           run: |
+            if [ "$RUNNER_OS" == "Linux" ]; then
               sudo apt install -y expect
+            elif [ "$RUNNER_OS" == "Windows" ]; then
+              exit 0
+            elif [ "$RUNNER_OS" == "macOS" ]; then
+              brew install expect
+            fi
               expect ${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_expansion.exp ${VERSION}
               if [[ $? -eq 0 ]]; then 
-                echo 'client doesn't support event expansion, !! can be input as a variable'; 
+                echo "client doesn't support event expansion, !! can be input as a variable"
               else 
-                echo 'client support event expansion, !! cannot be input as a variable'; 
+                echo "client support event expansion, !! cannot be input as a variable"
                 exit 1
               fi
 
+        - if: inputs.shell=='client-event-expansion'
+          uses: vedantmgoyal9/setup-wsl2@main
+
+        - if: inputs.shell=='client-event-expansion'
+          name: Test whether client support event expansion
+          shell: wsl-run {0}
+          run: |
+            if [ "$RUNNER_OS" == "Windows" ]; then
+              sudo apt install -y expect
+            else
+              exit 0
+            fi
+              expect ${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_expansion.exp ${VERSION}
+              if [[ $? -eq 0 ]]; then 
+                echo "client doesn't support event expansion, !! can be input as a variable"
+              else 
+                echo "client support event expansion, !! cannot be input as a variable"
+                exit
 #            if [ "$RUNNER_OS" == "Linux" ]; then
 #              chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_event_expansion.sh"
 #              "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_event_expansion.sh" "$status"
