fix(relational): test event expansion

--- a/.github/actions/context/action.yml
+++ b/.github/actions/context/action.yml
@@ -92,13 +92,13 @@ runs:
                 "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_macos.sh" ${VERSION}
               fi
 
-        - if: inputs.shell=='client-event-expansion' && (runner.os == 'Linux' || runner.os == 'macOS')
+        - if: inputs.shell == 'client-event-expansion' && (runner.os == 'Linux' || runner.os == 'macOS')
           name: Test whether client support event expansion
           shell: bash
           run: |
               if [ "$RUNNER_OS" == "Linux" ]; then
                 sudo apt install -y expect
-              else
+              elif [ "$RUNNER_OS" == "macOS" ]; then
                 brew install expect
               fi
                 expect ${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_expansion.exp ${VERSION}
@@ -113,17 +113,14 @@ runs:
           uses: vedantmgoyal9/setup-wsl2@main
 
         - if: inputs.shell=='client-event-expansion' && runner.os == 'Windows'
-          run: apt update && apt upgrade -y
-          shell: wsl-run {0}
-
-        - if: inputs.shell=='client-event-expansion' && runner.os == 'Windows'
           name: Test whether client support event expansion
           shell: wsl-run {0}
           run: |
+              apt update && apt upgrade -y
               sudo apt install -y expect
-              expect ${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_expansion.exp ${VERSION}
-              if [[ $? -eq 0 ]]; then 
-                echo "client doesn't support event expansion, !! can be input as a variable"
-              else 
+              expect $(wslpath "${GITHUB_WORKSPACE}")/.github/scripts/test/cli/test_expansion.exp ${VERSION}            
+              if [[ $? -eq 0 ]]; then
+                  echo "client doesn't support event expansion, !! can be input as a variable"
+              else
                 echo "client support event expansion, !! cannot be input as a variable"
                 exit 1
