--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -134,6 +134,10 @@ jobs:
             db-matrix: '["VectorDB"]'
             close-optimizer: "true"
             timeout-minutes: 360
+    cluster-test:
+        uses: ./.github/workflows/cluster-test.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
     analyze-required-test-check:
         if: always()
         needs: # List of jobs that must pass. Add more jobs if needed.
