--- a/.github/workflows/cluster-test.yml
+++ b/.github/workflows/cluster-test.yml
@@ -71,50 +71,22 @@ jobs:
                   cp -r "core/target/iginx-core-${VERSION}" IGinX-6890
                   ls IGinX-6890
 
-            - name: Modify IGinX-6889 Config
-              uses: ./.github/actions/edit
-              with:
-                  paths: IGinX-6889/iginx-core-${VERSION}/conf/config.properties
-                  statements: |
-                      s/port=6888/port=6889/g
-                      s/iginx_port=6888/iginx_port=6889/g
-                      s/restPort=7888/restPort=7889/g
-
-            - name: Modify IGinX-6890 Config
-              uses: ./.github/actions/edit
-              with:
-                  paths: IGinX-6890/iginx-core-${VERSION}/conf/config.properties
-                  statements: |
-                      s/port=6888/port=6890/g
-                      s/iginx_port=6888/iginx_port=6890/g
-                      s/restPort=7888/restPort=7890/g
-
             - name: Start IGinX-6888
               uses: ./.github/actions/iginxRunner
 
             - name: Start IGinX-6889
-              working-directory: IGinX-6889/iginx-core-${VERSION}
-              run: |
-                  if [ "$RUNNER_OS" == "Windows" ]; then
-                      chmod +x sbin/start_iginx.bat
-                      nohup sbin/start_iginx.bat > iginx-6889.log 2>&1 &
-                  else
-                      chmod +x sbin/start_iginx.sh
-                      nohup sbin/start_iginx.sh > iginx-6889.log 2>&1 &
-                  fi
-                  sleep 5
+              uses: ./.github/actions/iginxRunner
+              with:
+                iginx-home-path: IGinX-6889/iginx-core-${VERSION}
+                iginx-port: "6889"
+                rest-port: "7889"
 
             - name: Start IGinX-6890
-              working-directory: IGinX-6890/iginx-core-${VERSION}
-              run: |
-                  if [ "$RUNNER_OS" == "Windows" ]; then
-                      chmod +x sbin/start_iginx.bat
-                      nohup sbin/start_iginx.bat > iginx-6890.log 2>&1 &
-                  else
-                      chmod +x sbin/start_iginx.sh
-                      nohup sbin/start_iginx.sh > iginx-6890.log 2>&1 &
-                  fi
-                  sleep 5
+              uses: ./.github/actions/iginxRunner
+              with:
+                iginx-home-path: IGinX-6890/iginx-core-${VERSION}
+                iginx-port: "6890"
+                rest-port: "7890"
 
             - name: ClusterIT
               shell: bash -el {0}
@@ -123,14 +95,14 @@ jobs:
             - name: Show IGinX-6888 log
               if: always()
               shell: bash
-              run: cat iginx-*.log
+              run: cat iginx-6888.log
 
             - name: Show IGinX-6889 log
               if: always()
               shell: bash
-              run: cat IGinX-6889/iginx-core-${VERSION}/iginx-6889.log
+              run: cat iginx-6889.log
 
             - name: Show IGinX-6890 log
               if: always()
               shell: bash
-              run: cat IGinX-6890/iginx-core-${VERSION}/iginx-6890.log
+              run: cat iginx-6890.log
