fix(relational): add judge of dameng schema create

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -29,13 +29,23 @@ default_database=SYSDBA
 # 系统数据库，用于过滤
 system_databases=SYS,CTISYS,SYSAUDITOR,SYSSSO
 
+# 能够创建SCHEMA的权限
+database_create_privileges=RESOURCE,DBA,CREATE SCHEMA
+
 # 用于包裹表名和字段名的引号
 quote="
 
 support_create_database=false
 
+create_database_statement=CREATE SCHEMA %s;
+
+drop_database_statement=DROP SCHEMA %s CASCADE;
+
+# 查看用户权限
+query_user_privilege_statement=SELECT * FROM SESSION_PRIVS;
+
 # 创建表
-create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
+create_table_statement=CREATE TABLE IF NOT EXISTS %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
 
 drop_table_statement=DROP TABLE IF EXISTS %s
 
