--- a/example/src/main/resources/TransformMixedPythonAndSQL.yaml
+++ b/example/src/main/resources/TransformMixedPythonAndSQL.yaml
@@ -20,7 +20,7 @@
 
 ---
 taskList:
-- taskType: "iginx"
+- taskType: "sql"
   timeout: 10000000
   sqlList:
   - "SELECT s1, s2 FROM us.d1 WHERE key < 200;"
@@ -29,7 +29,7 @@ taskList:
   timeout: 10000000
   pyTaskName: "AddOneTransformer"
   PyOutputPathPrefix: "addOne"
-- taskType: "iginx"
+- taskType: "sql"
   timeout: 10000000
   sqlList:
     - "SELECT s1, s1, s2 FROM addOne.us.d1;"
