--- a/test/src/test/resources/transform/TransformMixedPythonAndSQL.yaml
+++ b/test/src/test/resources/transform/TransformMixedPythonAndSQL.yaml
@@ -1,6 +1,6 @@
 ---
 taskList:
-- taskType: "iginx"
+- taskType: "sql"
   timeout: 10000000
   sqlList:
   - "SELECT s1, s2 FROM us.d1 WHERE key < 200;"
@@ -9,7 +9,7 @@ taskList:
   timeout: 10000000
   pyTaskName: "AddOneTransformer"
   pyOutputPathPrefix: "addOne"
-- taskType: "iginx"
+- taskType: "sql"
   timeout: 10000000
   sqlList:
     - "SELECT s1, s1, s2 FROM addOne.us.d1;"
